Overflow issues fixed

--- a/frontend/src/styles/Version.module.sass
+++ b/frontend/src/styles/Version.module.sass
@@ -16,7 +16,7 @@ $version-width: 800px
 .version
 	@include transition(background-color, box-shadow, transform)
 	@include entry-shadow
-	width: 516px
+	width: 524px
 	height: $spacing * 2.5
 	border-radius: $spacing * 1.25
 	background: $entry-bg
