--- a/frontend/src/styles/VersionPage.module.sass
+++ b/frontend/src/styles/VersionPage.module.sass
@@ -43,7 +43,7 @@
 	background-color: $entry-bg
 	min-width: $spacing * 10 * 2
 	position: relative
-	max-height: 1946px
+	max-height: 2348px
 	overflow: auto
 	flex-flow: column nowrap
 
